Export cgmes zip (#30)
Signed-off-by: HOMER Etienne <etiennehomer@gmail.com>